# small_httpserver

./: CMakeLists.txt  LICENSE  README.md  httpconstants.cpp  httpconstants.hpp  httpmessage.cpp  httpmessage.hpp  httpserver.cpp  httpserver.hpp
include/: enumstringifier.hpp  httpconstants.hpp  httpmessage.hpp  httpserver.hpp
src/: httpconstants.cpp  httpmessage.cpp  httpserver.cpp
test/: CMakeLists.txt  index.html  main.cpp  style.css
unittests/: CMakeLists.txt  test.cpp
